force-app/main/default/objects/Account/fields/A2A__c.field-meta.xml
<CustomField>
    <fullName>A2A__c</fullName>
    <label>A2A</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR - DI DB</fullName>
            </value>
            <value>
                <fullName>NCR - D3 DB</fullName>
            </value>
            <value>
                <fullName>Fiserv CashEdge</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>