force-app/main/default/objects/Account/fields/A360_Annuity_Revenue_YTD_3__c.field-meta.xml
<CustomField>
    <fullName>A360_Annuity_Revenue_YTD_3__c</fullName>
    <label>2020 Recurring Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>