force-app/main/default/objects/Account/fields/A360_CMS_Revenue_YTD_2__c.field-meta.xml
<CustomField>
    <fullName>A360_CMS_Revenue_YTD_2__c</fullName>
    <inlineHelpText>For the year indicated, total EDW CMS solution revenue as of December Year End. Available for ERP countries only.</inlineHelpText>
    <label>2021 CMS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>