force-app/main/default/objects/Account/fields/A360_CMS_Revenue_YTD__c.field-meta.xml
<CustomField>
    <fullName>A360_CMS_Revenue_YTD__c</fullName>
    <inlineHelpText>Current YTD, total EDW CMS solution revenue. Available for ERP countries only.</inlineHelpText>
    <label>YTD CMS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>