force-app/main/default/objects/Account/fields/A360_Current_File_Value__c.field-meta.xml
<CustomField>
    <fullName>A360_Current_File_Value__c</fullName>
    <inlineHelpText>For SPOT countries only.  The current rolling 12 month value of all Annuity  agreements.</inlineHelpText>
    <label>Current File Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>