force-app/main/default/objects/Account/fields/A360_File_Value_YTD_1__c.field-meta.xml
<CustomField>
    <fullName>A360_File_Value_YTD_1__c</fullName>
    <inlineHelpText>For SPOT countries only. The value of all Annuity agreements as of the December Year End for the year indicated.</inlineHelpText>
    <label>2022 File Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>