force-app/main/default/objects/Account/fields/A360_Solution_Orders_YTD_2__c.field-meta.xml
<CustomField>
    <fullName>A360_Solution_Orders_YTD_2__c</fullName>
    <inlineHelpText>For the year indicated, total value of EDW Orders as of December Year End. Available for ERP countries only.</inlineHelpText>
    <label>2021 Orders Funnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>