force-app/main/default/objects/Account/fields/A360_Solution_Revenue_YTD__c.field-meta.xml
<CustomField>
    <fullName>A360_Solution_Revenue_YTD__c</fullName>
    <inlineHelpText>Current YTD, total EDW solution revenue.  Excludes Consumables and Annuity values.  Available for ERP countries only.</inlineHelpText>
    <label>YTD Orders Funnel Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>