force-app/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>CATM</description>
    <label>Account #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>