force-app/main/default/objects/Account/fields/Account_CDM_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_CDM_ID__c</fullName>
    <label>Account CDM ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>