force-app/main/default/objects/Account/fields/Account_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Inactive_Date__c</fullName>
    <label>Account Inactive Date</label>
    <type>DateTime</type>
</CustomField>