force-app/main/default/objects/Account/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <label>Account Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>