force-app/main/default/objects/Account/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LOB__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>CLA BRAZIL</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>EUROPE EXC RUSSIA</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDIA &amp; SEA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>NAMER CFI</fullName>
            </value>
            <value>
                <fullName>NAMER DIRECT</fullName>
            </value>
            <value>
                <fullName>NAMER MAJORS</fullName>
            </value>
            <value>
                <fullName>NAMER SMB</fullName>
            </value>
            <value>
                <fullName>NORTH ASIA</fullName>
            </value>
            <value>
                <fullName>NORTH ASIA AND SPA</fullName>
            </value>
            <value>
                <fullName>SAPAC</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>