force-app/main/default/objects/Account/fields/Actual_Customer_Source__c.field-meta.xml
<CustomField>
    <fullName>Actual_Customer_Source__c</fullName>
    <formula>If(ISBLANK(Customer_Source__c),&apos;Non-HSR&apos;,Customer_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Source</label>
    <type>Text</type>
</CustomField>