force-app/main/default/objects/Account/fields/AddOns__c.field-meta.xml
<CustomField>
    <fullName>AddOns__c</fullName>
    <label>Add-Ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Connect</fullName>
                <color>#FFFFFF</color>
                <label>Direct Connect</label>
            </value>
            <value>
                <fullName>Web Connect</fullName>
                <color>#FFFFFF</color>
                <label>Web Connect</label>
            </value>
            <value>
                <fullName>Alexa</fullName>
                <color>#FFFFFF</color>
                <label>Alexa</label>
            </value>
            <value>
                <fullName>Promotion Suite Plus</fullName>
                <color>#FFFFFF</color>
                <label>Promotion Suite Plus</label>
            </value>
            <value>
                <fullName>Purchase Rewards</fullName>
                <color>#FFFFFF</color>
                <label>Purchase Rewards</label>
            </value>
            <value>
                <fullName>Digital Banking Other</fullName>
                <color>#FFFFFF</color>
                <label>Digital Banking Other</label>
            </value>
            <value>
                <fullName>Digital Banking Connectivity</fullName>
                <color>#FFFFFF</color>
                <label>Digital Banking Connectivity</label>
            </value>
            <value>
                <fullName>LivePerson</fullName>
                <color>#FFFFFF</color>
                <label>LivePerson</label>
            </value>
            <value>
                <fullName>Account Opening</fullName>
                <color>#FFFFFF</color>
                <label>Account Opening</label>
            </value>
            <value>
                <fullName>PFM Connect</fullName>
                <color>#FFFFFF</color>
                <label>PFM Connect</label>
            </value>
            <value>
                <fullName>Online Statements</fullName>
                <color>#FFFFFF</color>
                <label>Online Statements</label>
            </value>
            <value>
                <fullName>Check Imaging</fullName>
                <color>#FFFFFF</color>
                <label>Check Imaging</label>
            </value>
            <value>
                <fullName>Remote Deposit Web</fullName>
                <color>#FFFFFF</color>
                <label>Remote Deposit Web</label>
            </value>
            <value>
                <fullName>Check Reordering</fullName>
                <color>#FFFFFF</color>
                <label>Check Reordering</label>
            </value>
            <value>
                <fullName>Credit Card SSO</fullName>
                <color>#FFFFFF</color>
                <label>Credit Card SSO</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#FFFFFF</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#FFFFFF</color>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <color>#FFFFFF</color>
                <label>N/A</label>
            </value>
            <value>
                <fullName>In-house</fullName>
                <color>#FFFFFF</color>
                <label>In-house</label>
            </value>
            <value>
                <fullName>No Solution</fullName>
                <color>#FFFFFF</color>
                <label>No Solution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>