force-app/main/default/objects/Account/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <inlineHelpText>Where does your customer archive all check images?</inlineHelpText>
    <label>Archive</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: ImageMark Archive</fullName>
            </value>
            <value>
                <fullName>NCR: Intria ImageMark Archive Storage</fullName>
            </value>
            <value>
                <fullName>CSC</fullName>
            </value>
            <value>
                <fullName>Vsoft</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
            <value>
                <fullName>Fiserv</fullName>
            </value>
            <value>
                <fullName>Alogent</fullName>
            </value>
            <value>
                <fullName>JackHenry</fullName>
            </value>
            <value>
                <fullName>IBM:ViewPointe</fullName>
            </value>
            <value>
                <fullName>NCR: C1 Archive Storage</fullName>
            </value>
            <value>
                <fullName>Genpact</fullName>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>