force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFRICA DIRECT</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CCASA</fullName>
            </value>
            <value>
                <fullName>CENTRAL EUROPE</fullName>
            </value>
            <value>
                <fullName>CHILE</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>FRANCE BELGIUM</fullName>
            </value>
            <value>
                <fullName>HK TAIWAN</fullName>
            </value>
            <value>
                <fullName>IBERIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDIA AND SEA</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>MEA DISTRIBUTORS</fullName>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>NAMER CFI</fullName>
            </value>
            <value>
                <fullName>NAMER CANADA</fullName>
            </value>
            <value>
                <fullName>NAMER CENTRAL</fullName>
            </value>
            <value>
                <fullName>NAMER ENTERPRISE</fullName>
            </value>
            <value>
                <fullName>NAMER MIDWEST</fullName>
            </value>
            <value>
                <fullName>NAMER NATIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>