force-app/main/default/objects/Account/fields/Assets_current__c.field-meta.xml
<CustomField>
    <fullName>Assets_current__c</fullName>
    <inlineHelpText>Enter full value</inlineHelpText>
    <label>Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>