force-app/main/default/objects/Account/fields/ATM__c.field-meta.xml
<CustomField>
    <fullName>ATM__c</fullName>
    <inlineHelpText>This product is used to capture check images for self-service devices.</inlineHelpText>
    <label>ATM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: Passport</fullName>
            </value>
            <value>
                <fullName>NCR: INTRIA Passport</fullName>
            </value>
            <value>
                <fullName>NCR: Transaction Gateway</fullName>
            </value>
            <value>
                <fullName>Diebold: ImageWay</fullName>
            </value>
            <value>
                <fullName>Alogent</fullName>
            </value>
            <value>
                <fullName>Jaguar</fullName>
            </value>
            <value>
                <fullName>Regional Competitor</fullName>
            </value>
            <value>
                <fullName>CheckAlt</fullName>
            </value>
            <value>
                <fullName>Fiserv</fullName>
            </value>
            <value>
                <fullName>Genpact</fullName>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>