force-app/main/default/objects/Account/fields/ATM_Hardware_Vendors__c.field-meta.xml
<CustomField>
    <fullName>ATM_Hardware_Vendors__c</fullName>
    <label>ATM Hardware Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
                <color>#FFFFFF</color>
                <label>NCR</label>
            </value>
            <value>
                <fullName>Diebold-Nixdorf</fullName>
                <color>#FFFFFF</color>
                <label>Diebold-Nixdorf</label>
            </value>
            <value>
                <fullName>Hyosung</fullName>
                <color>#FFFFFF</color>
                <label>Hyosung</label>
            </value>
            <value>
                <fullName>GRG</fullName>
                <color>#FFFFFF</color>
                <label>GRG</label>
            </value>
            <value>
                <fullName>Triton</fullName>
                <color>#FFFFFF</color>
                <label>Triton</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#FFFFFF</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#FFFFFF</color>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <color>#FFFFFF</color>
                <label>N/A</label>
            </value>
            <value>
                <fullName>In-house</fullName>
                <color>#FFFFFF</color>
                <label>In-house</label>
            </value>
            <value>
                <fullName>No Solution</fullName>
                <color>#FFFFFF</color>
                <label>No Solution</label>
            </value>
            <value>
                <fullName>Perto</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>Sprintquip (coin dispenser)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>