force-app/main/default/objects/Account/fields/ATM_Manufacture_Model_Family__c.field-meta.xml
<CustomField>
    <fullName>ATM_Manufacture_Model_Family__c</fullName>
    <label>ATM Manufacture Model Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: Persona</fullName>
                <color>#FFFFFF</color>
                <label>NCR: Persona</label>
            </value>
            <value>
                <fullName>NCR: 663x</fullName>
                <color>#FFFFFF</color>
                <label>NCR: 663x</label>
            </value>
            <value>
                <fullName>NCR: 668x</fullName>
                <color>#FFFFFF</color>
                <label>NCR: 668x</label>
            </value>
            <value>
                <fullName>NCR: 662x</fullName>
                <color>#FFFFFF</color>
                <label>NCR: 662x</label>
            </value>
            <value>
                <fullName>6623 - SelfServ23 Preferred Offers</fullName>
            </value>
            <value>
                <fullName>6684 - SelfServ84 Preferred Offers - DU Digitize</fullName>
            </value>
            <value>
                <fullName>6684 - SelfServ84 Preferred Offers - DU Optimize</fullName>
            </value>
            <value>
                <fullName>6684 - SelfServ84 Preferred Offers - DU Standardize</fullName>
            </value>
            <value>
                <fullName>6684 - SelfServ84 Preferred Offers - WU Digitize</fullName>
            </value>
            <value>
                <fullName>6684 - SelfServ84 Preferred Offers - WU Optimize</fullName>
            </value>
            <value>
                <fullName>6684 - SelfServ84 Preferred Offers - WU Standardize</fullName>
            </value>
            <value>
                <fullName>6688 - SelfServ88 Preferred Offers - Digitize</fullName>
            </value>
            <value>
                <fullName>6688 - SelfServ88 Preferred Offers - Optimize</fullName>
            </value>
            <value>
                <fullName>6688 - SelfServ88 Preferred Offers - Standardize</fullName>
            </value>
            <value>
                <fullName>NCR: Other</fullName>
                <color>#FFFFFF</color>
                <label>NCR: Other</label>
            </value>
            <value>
                <fullName>NCR: 664x</fullName>
            </value>
            <value>
                <fullName>DN: Opteva</fullName>
                <color>#FFFFFF</color>
                <label>DN: Opteva</label>
            </value>
            <value>
                <fullName>DN: 77xx</fullName>
                <color>#FFFFFF</color>
                <label>DN: 77xx</label>
            </value>
            <value>
                <fullName>DN: WN ProCash</fullName>
                <color>#FFFFFF</color>
                <label>DN: WN ProCash</label>
            </value>
            <value>
                <fullName>DN: WN CINEO</fullName>
                <color>#FFFFFF</color>
                <label>DN: WN CINEO</label>
            </value>
            <value>
                <fullName>DN CS3700</fullName>
            </value>
            <value>
                <fullName>DN CS280</fullName>
            </value>
            <value>
                <fullName>DN CS5500</fullName>
            </value>
            <value>
                <fullName>DN: Other</fullName>
                <color>#FFFFFF</color>
                <label>DN: Other</label>
            </value>
            <value>
                <fullName>NH: 7600</fullName>
                <color>#FFFFFF</color>
                <label>NH: 7600</label>
            </value>
            <value>
                <fullName>NH: 7800</fullName>
                <color>#FFFFFF</color>
                <label>NH: 7800</label>
            </value>
            <value>
                <fullName>NH: 8000</fullName>
                <color>#FFFFFF</color>
                <label>NH: 8000</label>
            </value>
            <value>
                <fullName>NH: Other</fullName>
                <color>#FFFFFF</color>
                <label>NH: Other</label>
            </value>
            <value>
                <fullName>Triton</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#FFFFFF</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>