force-app/main/default/objects/Account/fields/ATMaaS__c.field-meta.xml
<CustomField>
    <fullName>ATMaaS__c</fullName>
    <label>ATMaaS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No (Planned)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>