force-app/main/default/objects/Account/fields/AutoPay_Setup__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_Setup__c</fullName>
    <description>This field will contains Autopay status of customer. Populate from ERP</description>
    <label>AutoPay Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>