force-app/main/default/objects/Account/fields/Back_Office_Processing__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Processing__c</fullName>
    <inlineHelpText>This product is used to capture check images in the back office.</inlineHelpText>
    <label>Back Office Processing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: Transaction Manager</fullName>
            </value>
            <value>
                <fullName>NCR: INTRIA Transction manager</fullName>
            </value>
            <value>
                <fullName>NCR: Passport</fullName>
            </value>
            <value>
                <fullName>Vsoft</fullName>
            </value>
            <value>
                <fullName>FIS: Vision IP</fullName>
            </value>
            <value>
                <fullName>Fiserv</fullName>
            </value>
            <value>
                <fullName>Alogent</fullName>
            </value>
            <value>
                <fullName>JackHenry</fullName>
            </value>
            <value>
                <fullName>IBM FTM</fullName>
            </value>
            <value>
                <fullName>NCR: C1 Back Office</fullName>
            </value>
            <value>
                <fullName>Genpact</fullName>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>