force-app/main/default/objects/Account/fields/Backlog_Orders_Closed_amount__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Orders_Closed_amount__c</fullName>
    <label>Backlog Orders Closed amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>