force-app/main/default/objects/Account/fields/Backlog_Orders_Open_amount__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Orders_Open_amount__c</fullName>
    <label>Backlog Orders Open amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>