force-app/main/default/objects/Account/fields/Bank_Holding_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Holding_Company_Number__c</fullName>
    <description>This number is the federal identifier for the Holding Companies.</description>
    <label>BHC#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>