force-app/main/default/objects/Account/fields/Billing_Latitude_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Latitude_Geocode__c</fullName>
    <label>Corporate Latitude Geocode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>