force-app/main/default/objects/Account/fields/Billing_Longitude_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Longitude_Geocode__c</fullName>
    <label>Corporate Longitude Geocode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>